# power-projections-automation

./: .gitignore  Makefile  README.md  debug_nan.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
code/: aggregator.py
notebooks/: veera_first_pass.ipynb
scripts/: check.py  format.py
tests/: aggregator_test.py  conftest.py
utils/: __init__.py  aggregator.py
